--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,8 @@ board = esp32-s3-devkitc-1
 framework = arduino
 board_build.flash_size = 4MB
 board_build.flash_mode = dio
+board_build.partitions = default.csv
+board_upload.flash_size = 4MB
 lib_deps =
     sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.15
     bblanchon/ArduinoJson@^6.21.3
